src/test/deca/syntax/valid/custom/while/while_div.deca
// Description:
//   While with condition div.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   while (a / b == 1) {
        i = i + 1;
   }
}
